--- a/style.css
+++ b/style.css
@@ -207,8 +207,7 @@ body {
   white-space: nowrap;
   display: inline-block;
   height: 100%;
-  width: 270%;
-  margin-right: 1.6rem;
+  width: fit-content;
   animation-name: scroll-animation;
   animation-duration: 75s;
   animation-iteration-count: infinite;
@@ -525,8 +524,7 @@ body {
   white-space: nowrap;
   display: inline-block;
   height: 100%;
-  width: 122.5%;
-  margin-right: 1rem;
+  width: fit-content;
   animation-name: scroll-animation;
   animation-duration: 30s;
   animation-iteration-count: infinite;
@@ -712,9 +710,8 @@ body {
   }
 
   #container {
-    width: 330%;
+    width: fit-content;
     animation-duration: 65s;
-    margin-right: 0rem;
   }
 
   #container .elem {
@@ -787,7 +784,7 @@ body {
   }
 
   #scroll-container {
-    width: 140%;
+    width: fit-content;
   }
 
   #scroll-container .scroll-box {
@@ -842,7 +839,7 @@ body {
 /* ------------------------------------------------------------------------------------------------------------------------------------ */
 /* ------------------------------------------------------------------------------------------------------------------------------------ */
 
-@media screen and (min-width: 769px) and (max-width: 950px) {
+@media screen and (min-width: 769px) and (max-width: 899px) {
   #nav {
     padding: 0px 20px;
   }
